--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -20,7 +20,8 @@
       <input type="text" required name="email" />
       <label>Password</label>
       <input type="text" required name="password" />
-
+      <label>Role</label>
+      <input type="text" required name="role" />
       <button type="submit">Signup</button>
     </form>
   </body>
